--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -24,6 +24,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -33,9 +42,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:happy]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-happy-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
