Updated predict function.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tree import DecisionTree"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,9 +37,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
